--- a/style.css
+++ b/style.css
@@ -33,6 +33,26 @@
                 padding: 0 2px;
             }
 
+
+              
+
+.pic{
+    opacity: 0;
+  transition: all 2s;
+   transform: translateY(100px);
+}
+
+@media(prefers-reduced-motion){
+    .hidden{
+        transition: none;
+    }
+}
+
+.show{
+    opacity: 1;
+   transform: translateY(0);
+}
+
             .pic img{
                 height:auto;
                 max-width: 100%;
